# Language-Model-Hallucination-Detection-via-Entropy-Divergence

./: .gitignore  CITATION.cff  COLABS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESEARCH.md  SYNC.md  claude1.md  confidence_calibrator.py  hypothesis_test.py  pyproject.toml  requirements.txt  test_attention_analyzer.py  utils.py
.github/workflows/: benchmark.yml  test.yml
colab/: README.md  ablation_study.ipynb  gpu_benchmark.ipynb  quick_cpu_validation.ipynb  v1_benchmark.ipynb  v2_full_pipeline.ipynb
paper/: PAPER_ROADMAP.md  paper.tex  references.bib
results/: .gitkeep  ablation_results.json  benchmark_results.json  benchmark_results_cpu_quick.json
v1/: AGENT.md  Dockerfile  README.md  attention_analyzer.py  claude1.md  hypothesis_test.py  run_experiment.py  test_attention_analyzer.py  utils.py
v2/: README.md  __init__.py  adversarial.py  api_testing.py  claude2.md  data_generator.py  detector.py  embedding_anomaly.py  feature_engineer.py  pipeline.py  requirements.txt  test_detector.py  test_feature_engineer.py  vertex_deploy.py
