[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-detection"
version = "2.0.0"
description = "LLM hallucination detection via attention pattern analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "A-Kuo"},
]
keywords = [
    "hallucination-detection",
    "attention-analysis",
    "llm-safety",
    "transformer-interpretability",
    "information-theory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
model = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
api = [
    "anthropic>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
]
all = [
    "hallucination-detection[model,api,dev]",
]

[project.urls]
Repository = "https://github.com/A-Kuo/Natural-Hallucination-Analysis"
Issues = "https://github.com/A-Kuo/Natural-Hallucination-Analysis/issues"

[tool.pytest.ini_options]
testpaths = ["v1"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["v1*", "v2*"]
